--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 offset-lg-2">
+            <div class="col-12 col-md-6 offset-lg-2">
                 <div class="col-12 col-md-6">
                     <hr>
                     <h2 class="logo-font mb-4">Reviews</h2>
@@ -113,28 +113,17 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 offset-lg-2">
+            <div class="col-12 col-md-6 offset-lg-2">
                 {% if review_items %}
-                    <div class="table-responsive rounded">
-                        <table class="table table-sm table-borderless">
-                            <thead class="text-black">
+                        {% for item in review_items %}
+                        <div class="table-responsive rounded">
+                            <table class="table table-sm table-borderless">
+                                <thead class="text-black">
+                                    <tr>
+                                        <th scope="col">{{ item.user }}</th>
+                                    </tr>
+                                </thead>
                                 <tr>
-                                    <th scope="col">Product</th>
-                                    <th scope="col"></th>
-                                    <th scope="col">Price</th>
-                                    <th scope="col">Review</th>
-                                </tr>
-                            </thead>
-
-                            {% for item in review_items %}
-                                <tr>
-                                    <td class="p-3 w-25">
-                                        {% if item.product.image %}
-                                        <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
-                                        {% else %}
-                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
-                                        {% endif %}
-                                    </td>
                                     <td class="py-3">
                                         <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                                         <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
@@ -142,11 +131,15 @@
                                     <td class="py-3">
                                         <p class="my-0">${{ item.product.price }}</p>
                                     </td>
-                                    <td class="py-3">
+                                </tr>
+                                <tr>
+                                    <td class="py-3 box">
                                         <p class="my-0">{{ item.review }}</p>
                                     </td>
-                                    <td class="py-3">
-                                        <small class="ml-3">
+                                </tr>
+                                <tr>
+                                   <td class="py-3">
+                                        <small>
                                             <a href="{% url 'edit_review' item.id %}">Edit</a> |
                                             <a class="text-danger" href="{% url 'delete_review_confirmation' item.id %}">Delete</a>
                                         </small>
@@ -157,7 +150,7 @@
                     </div>
             {% else %}
             <div class="row">
-                <div class="col-12 col-md-6">
+                <div class="col-12">
                     <p class="text-muted">Please fill out the form below to submit your product review.</p>
                     <form method="POST" class="form mb-2" enctype="multipart/form-data">
                         {% csrf_token %}
@@ -168,7 +161,7 @@
                                 {{ field }}
                             {% endif %}
                         {% endfor %}
-                        <div class="text-right">
+                        <div class="text-right mb-5">
                             <a class="btn btn-outline-black rounded-0" href="{% url 'profile' %}">Cancel</a>
                             <button class="btn btn-black rounded-0" type="submit">Add Review</button>
                         </div>
