--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -37,9 +37,13 @@
                             <tr>
                                 <td class="p-3 w-25">
                                     {% if product.image %}
-                                    <img class="img-fluid rounded" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                    <a href="{% url 'product_detail' product.id %}">
+                                        <img class="img-fluid rounded" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                    </a>
                                     {% else %}
-                                    <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                    <a href="{% url 'product_detail' product.id %}">
+                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                    </a>
                                     {% endif %}
                                 </td>
                                 <td class="py-3">
