--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -61,6 +61,45 @@
                                         <a class="text-danger" href="{% url 'delete_wishlist_confirmation' product.id %}">Delete</a>
                                     </small>
                                 </td>
+                                <td>
+                                    <div class="col-12" style="padding-left: 0;">
+                                        <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                                            {% csrf_token %}
+                                            <div class="form-row">
+                                                <div class="col-6">
+                                                    <div class="form-group w-50">
+                                                        <div class="input-group">
+                                                            <div class="input-group-prepend">
+                                                                <button class="decrement-qty btn btn-black rounded-0"
+                                                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                                    <span class="icon">
+                                                                        <i class="fas fa-minus"></i>
+                                                                    </span>
+                                                                </button>
+                                                            </div>
+                                                            <input class="form-control qty_input" type="number"
+                                                                name="quantity" value="1" min="1" max="99"
+                                                                data-item_id="{{ product.id }}"
+                                                                id="id_qty_{{ product.id }}">
+                                                            <div class="input-group-append">
+                                                                <button class="increment-qty btn btn-black rounded-0" 
+                                                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                                    <span class="icon">
+                                                                        <i class="fas fa-plus"></i>
+                                                                    </span>
+                                                                </button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-6">
+                                                    <input type="submit" class="btn btn-black rounded-0 text-uppercase" value="Add to Bag">
+                                                </div>
+                                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                            </div>
+                                        </form>
+                                    </div>
+                                </td>
                             </tr>
                         {% endfor %}
                             <tr>
@@ -87,4 +126,10 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+    {% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
