--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -19,7 +19,13 @@
                 <hr>
             </div>
         </div>
-        
+        {% if already_reviewed %}
+            <div class="row">
+                <div class="col-12">
+                    <p class="text-muted mb-5">Please edit or delete to your change your previous review.</p>
+                </div>
+            </div>
+        {% else %}
         <div class="row">
             <div class="col-12 col-md-6">
                 <p class="text-muted">Please fill out the form below to submit your product review.</p>
@@ -37,8 +43,9 @@
                         <button class="btn btn-black rounded-0" type="submit">Add Review</button>
                     </div>
                 </form>
-            </div>          
-            <div class="col-12 col-lg-6">
+            </div> 
+            {% endif %}       
+            <div class="col-12">
                 <p class="text-muted">Past Reviews</p>
                 {% if review_items %}
                     <div class="table-responsive rounded">
@@ -70,6 +77,12 @@
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0">{{ item.review }}</p>
+                                    </td>
+                                    <td class="py-3">
+                                        <small class="ml-3">
+                                            <a href="{% url 'edit_review' item.id %}">Edit</a>
+                                            <a class="text-danger" href="{% url 'delete_review_confirmation' item.id %}">Delete</a>
+                                        </small>
                                     </td>
                                 </tr>
                             {% endfor %} 
