--- a/reviews/templates/reviews/review.html
+++ b/reviews/templates/reviews/review.html
@@ -59,7 +59,7 @@
                                     </td>
                                     <td class="py-3">
                                         <small class="ml-3">
-                                            <a href="{% url 'edit_review' item.id %}">Edit</a> |
+                                            <a href="{% url 'edit_review' item.id %}">Edit</a>
                                             <a class="text-danger" href="{% url 'delete_review_confirmation' item.id %}">Delete</a>
                                         </small>
                                     </td>
@@ -83,7 +83,7 @@
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
-                        <span class="text-uppercase">Keep Shopping</span>
+                        <span class="text-uppercase">Back to Profile</span>
                     </a>
                 {% endif %}
             </div>
