--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,8 +12,8 @@
 {% block content %}
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-6"></div>
-            <div class="col-6 my-auto text-right">
+            <div class="col-md-6"></div>
+            <div class="col-12 col-md-6 my-auto text-right">
                 <h1 class="display-4 logo-font text-white">
                     New items added!
                 </h1>
