--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
             <input class="form-control border border-black rounded-0" type="text" name="q"
               placeholder="Search our site">
             <div class="input-group-append">
-              <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+              <button class="form-control btn btn-black border border-black rounded-0" type="submit" style="color:#9469d9!important;">
                 <span class="icon">
                   <i class="fas fa-search"></i>
                 </span>
@@ -73,7 +73,7 @@
         <ul class="list-inline list-unstyled text-center text-lg-right my-0">
           <li class="account list-inline-item dropdown">
             <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">
+              aria-expanded="false" style="color:#9469d9!important;">
               <div class="text-center">
                 <div><i class="fas fa-user fa-lg"></i></div>
                 <p class="my-0">My Account</p>
@@ -95,7 +95,7 @@
             </div>
           </li>
           <li class="list-inline-item">
-            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}" style="color:#9469d9!important;">
               <div class="text-center">
                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                 <p class="my-0">
