--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -35,7 +35,9 @@
             <div class="col-12 col-xl-6">
                 <div class="row">
                     <div class="col-4"><p class="text-muted">Order History</p></div>
-                </div>                
+                </div> 
+                {% if orders %}      
+                {% for order in orders %}         
                 <div class="order-history table-responsive">
                     <table class="table table-sm table-borderless">
                         <thead>
@@ -47,7 +49,6 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {% for order in orders %}
                                 <tr>
                                     <td>
                                         <a href="{% url 'order_history' order.order_number %}"
@@ -76,6 +77,11 @@
                         </tbody>
                     </table>
                 </div>
+                {% else %}
+                <div>
+                    <p class="my-3 text-muted">You haven't made any orders yet. Keep shopping to place an order.</p>
+                </div>
+                {% endif %}
             </div>
             <div class="col-12">
                 <p><a class="text-muted" href="{% url 'wishlist' %}">My Wishlist</a></p>
@@ -157,12 +163,13 @@
                 </div>
                 {% else %}
                 <div class="col-12">
-                    <p class="my-0 small text-muted">You haven't added any items to your wishlist yet.</p>
+                    <p class="my-5 text-muted">You haven't added any items to your wishlist yet.</p>
                 </div>
                 {% endif %}
             </div>
             <div class="col-12">
                 <p><a class="text-muted" href="{% url 'reviews' %}">My Reviews</a></p>
+                {% if review_items %}
                 <div>
                     <table class="table table-sm table-borderless">
                         <thead>
@@ -209,6 +216,11 @@
                     </table>
                 </div>
             </div>
+            {% else %}
+            <div class="col-12">
+                <p class="my-5 text-muted">You haven't reviewed any items yet.</p>
+            </div>
+            {% endif %}
         </div>
 {% endblock %}
 
