--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col">
                 {% if wishlist_items %}
-                <div class="table-responsive rounded">
+                <div">
                     <table class="table table-sm table-borderless">
                         <thead class="text-black">
                             <tr>
