--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -131,11 +131,12 @@
                                         <p class="my-0">${{ item.product.price }}</p>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr class="mb-5">
                                     <td class="py-3 box">
-                                        <p class="my-0">{{ item.review }}</p>
+                                        <p class="mb-0">{{ item.review }}</p>
                                     </td>
                                 </tr>
+                                {% if item.user == request.user %}
                                 <tr>
                                    <td class="py-3">
                                         <small>
@@ -144,6 +145,7 @@
                                         </small>
                                     </td>
                                 </tr>
+                                {% endif %}
                             {% endfor %}
                         </table>
                     </div>
