--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -32,7 +32,7 @@
                     <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
                 </form>
             </div>
-            <div class="col-12 col-xl-6">
+            <div class="col-12 col-lg-6">
                 <div class="row">
                     <div class="col-4"><p class="text-muted">Order History</p></div>
                 </div> 
@@ -80,6 +80,12 @@
                 {% else %}
                 <div>
                     <p class="my-3 text-muted">You haven't made any orders yet. Keep shopping to place an order.</p>
+                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg float-right">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="text-uppercase">Keep Shopping</span>
+                    </a>
                 </div>
                 {% endif %}
             </div>
@@ -163,6 +169,12 @@
                 {% else %}
                 <div class="col-12">
                     <p class="my-5 text-muted">You haven't added any items to your wishlist yet.</p>
+                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg float-right">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        <span class="text-uppercase">Keep Shopping</span>
+                    </a>
                 </div>
                 {% endif %}
             </div>
