--- a/reviews/templates/reviews/confirmation.html
+++ b/reviews/templates/reviews/confirmation.html
@@ -18,9 +18,9 @@
                 <h2 class="logo-font mb-4">Delete</h2>
                 <hr>
                 <p>Are you sure you want to delete this review?</p>
-                <form method="POST" action="{% url 'delete_review' review_item.id %}">
+                <form method="POST" action="{% url 'delete_review' review_item.id %}" class="my-5">
                     {% csrf_token %}
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'reviews' %}">Cancel</a>
+                    <a class="btn btn-outline-black rounded-0 mr-5" href="{% url 'reviews' %}">Cancel</a>
                     <button class="btn btn-outline-black rounded-0" type="submit">Delete</button>
                 </form>
             </div>
