--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -21,111 +21,113 @@
         </div>
     </div>
 
-        <div class="row">
-            <div class="col">
-                {% if wishlist_items %}
-                {% for product in products %}
-                <div">
-                    <table class="table table-sm table-borderless">
-                        <thead class="text-black">
-                            <tr>
-                                <th scope="col">Product</th>
-                                <th scope="col"></th>
-                                <th scope="col">Price</th>
-                            </tr>
-                        </thead>
-                            <tr>
-                                <td class="p-3 w-25">
-                                    {% if product.image %}
-                                    <a href="{% url 'product_detail' product.id %}">
-                                        <img class="img-fluid rounded" src="{{ product.image.url }}" alt="{{ product.name }}">
-                                    </a>
-                                    {% else %}
-                                    <a href="{% url 'product_detail' product.id %}">
-                                        <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                                    </a>
-                                    {% endif %}
-                                </td>
-                                <td class="py-3">
-                                    <p class="my-0"><strong>{{ product.name }}</strong></p>
-                                    <p class="my-0 small text-muted">SKU: {{ product.sku|upper }}</p>
-                                </td>
-                                <td class="py-3">
-                                    <p class="my-0">${{ product.price }}</p>
-                                </td>
-                                <td class="py-3">
-                                    <p class="my-0">{{ product.review }}</p>
-                                </td>
-                                <td class="py-3">
-                                    <small class="ml-3">
-                                        <a class="text-danger" href="{% url 'delete_wishlist_confirmation' product.id %}">Delete</a>
-                                    </small>
-                                </td>
-                                <td>
-                                    <div class="col-12" style="padding-left: 0;">
-                                        <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                                            {% csrf_token %}
-                                            <div class="form-row">
-                                                <div class="col-6">
-                                                    <div class="form-group w-50">
-                                                        <div class="input-group">
-                                                            <div class="input-group-prepend">
-                                                                <button class="decrement-qty btn btn-black rounded-0"
-                                                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                                    <span class="icon">
-                                                                        <i class="fas fa-minus"></i>
-                                                                    </span>
-                                                                </button>
-                                                            </div>
-                                                            <input class="form-control qty_input" type="number"
-                                                                name="quantity" value="1" min="1" max="99"
-                                                                data-item_id="{{ product.id }}"
-                                                                id="id_qty_{{ product.id }}">
-                                                            <div class="input-group-append">
-                                                                <button class="increment-qty btn btn-black rounded-0" 
-                                                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                                    <span class="icon">
-                                                                        <i class="fas fa-plus"></i>
-                                                                    </span>
-                                                                </button>
-                                                            </div>
+    <div class="row">
+        <div class="col-12">
+            {% if wishlist_items %}
+            {% for product in products %}
+            <div class="table-responsive">
+                <table class="table table-sm table-borderless">
+                    <thead class="text-black">
+                        <tr>
+                            <th scope="col">Product</th>
+                            <th scope="col"></th>
+                            <th scope="col">Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="p-3 w-25">
+                                {% if product.image %}
+                                <a href="{% url 'product_detail' product.id %}">
+                                    <img class="img-fluid rounded" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                </a>
+                                {% else %}
+                                <a href="{% url 'product_detail' product.id %}">
+                                    <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                </a>
+                                {% endif %}
+                            </td>
+                            <td class="py-3">
+                                <p class="my-0"><strong>{{ product.name }}</strong></p>
+                                <p class="my-0 small text-muted">SKU: {{ product.sku|upper }}</p>
+                            </td>
+                            <td class="py-3">
+                                <p class="my-0">${{ product.price }}</p>
+                            </td>
+                            <td class="py-3">
+                                <p class="my-0">{{ product.review }}</p>
+                            </td>
+                            <td class="py-3">
+                                <small class="ml-3">
+                                    <a class="text-danger" href="{% url 'delete_wishlist_confirmation' product.id %}">Delete</a>
+                                </small>
+                            </td>
+                            <td>
+                                <div class="col-12" style="padding-left: 0;">
+                                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                                        {% csrf_token %}
+                                        <div class="form-row">
+                                            <div class="col-6">
+                                                <div class="form-group w-50">
+                                                    <div class="input-group">
+                                                        <div class="input-group-prepend">
+                                                            <button class="decrement-qty btn btn-black rounded-0"
+                                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                                <span class="icon">
+                                                                    <i class="fas fa-minus"></i>
+                                                                </span>
+                                                            </button>
+                                                        </div>
+                                                        <input class="form-control qty_input" type="number"
+                                                            name="quantity" value="1" min="1" max="99"
+                                                            data-item_id="{{ product.id }}"
+                                                            id="id_qty_{{ product.id }}">
+                                                        <div class="input-group-append">
+                                                            <button class="increment-qty btn btn-black rounded-0" 
+                                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                                <span class="icon">
+                                                                    <i class="fas fa-plus"></i>
+                                                                </span>
+                                                            </button>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-6">
-                                                    <input type="submit" class="btn btn-black rounded-0 text-uppercase" value="Add to Bag">
-                                                </div>
-                                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
                                             </div>
-                                        </form>
-                                    </div>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                            <tr>
-                                <td colspan="7" class="text-right">
-                                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                                        <span class="icon">
-                                            <i class="fas fa-chevron-left"></i>
-                                        </span>
-                                        <span class="text-uppercase">Keep Shopping</span>
-                                    </a>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                {% else %}
-                    <p class="lead mb-5">You haven't added any items to your wishlist yet.</p>
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                        <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
-                        </span>
-                        <span class="text-uppercase">Keep Shopping</span>
-                    </a>
-                {% endif %}
+                                            <div class="col-6">
+                                                <input type="submit" class="btn btn-black rounded-0 text-uppercase" value="Add to Bag">
+                                            </div>
+                                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                        </div>
+                                    </form>
+                                </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                        <tr>
+                            <td colspan="7" class="text-right">
+                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
+            {% else %}
+                <p class="lead mb-5">You haven't added any items to your wishlist yet.</p>
+                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                    <span class="icon">
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span class="text-uppercase">Keep Shopping</span>
+                </a>
+            {% endif %}
         </div>
     </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
