added mobile Css and refactored bag app. Next to do so with the review and wishlist tables

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -141,7 +141,7 @@
                             {% if already_reviewed %}
                             <tr>
                                 <td>
-                                    <p class="text-muted mb-5">Edit or delete your review here.</p>
+                                    <p class="text-muted mb-5">Edit or delete your review from the review page.</p>
                                 </td>
                                 {% for item in review_items %}
                                     {% if review_match|length > 0 %}
